# smart-webdriver-manager

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  setup.cfg  tox.ini
src/smart_webdriver_manager/: __init__.py  browser.py  cache.py  context.py  driver.py  snap.py  utils.py
tests/: test_chrome_driver.py  test_downloader.py  test_install.py  util.py
