[tool.poetry]
name = "smart-webdriver-manager"
version = "0.2.0"
description = "A smart webdriver and browser manager"
readme = "README.md"
license = "MIT"
authors = ["bissli"]
repository = "https://github.com/bissli/smart-webdriver-manager"
classifiers=[
	"License :: OSI Approved :: Apache Software License",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Natural Language :: English",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
backoff = "^1.11.1"
mock = {version = "^4.0.3", optional = true}
selenium = {version = "^4.1.0", optional = true}
bump2version = {version = "^1.0.1", optional = true}
pytest = {version = "^6.2.5", optional = true}
pytest-cov = {version = "^3.0.0", optional = true}
asserts = {version = "^0.11.1", optional = true}

[tool.poetry.extras]
dev = ["bump2version"]
test = [
	"pytest",
	"pytest-cov",
	"mock",
	"asserts",
	"selenium",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
